syntax = "proto3";

package pb;

option objc_class_prefix = "AUTH";


service Autharization {
    rpc UserSignup (SignupRequest) returns (SignupResponse){}
    rpc OtpRequest (OtpSignUpRequest) returns (OtpSignUpResponse){}
    rpc UserLogin (LoginRequest) returns (LoginResponse){}
    rpc validName (validNameRequest) returns (validNameResponse){}
    rpc ResendOtp (resendOtpRequest) returns (resendOtpResponse){}
    rpc ForgotPasswordOtp(ForgotPasswordOtpRequest) returns (ForgotPasswordOtpResponse){}
    rpc ForgotPasswordValidateOtp(ForgotPasswordValidateOtpRequest) returns (ForgotPasswordValidateOtpResponse){}
    rpc ForgotPasswordChangePassword(ForgotPasswordChangePasswordRequest) returns (ForgotPasswordChangePasswordResponse){}
    rpc AdminLogin(AdminLoginRequest) returns (AdminLoginResponse) {}
    rpc GetUsers (GetUsersRequest) returns (GetUsersResponse) {}
    rpc ManageUser (ManageUserRequest) returns (ManageUserResponse){}
    rpc GetInterest(GetInterestRequest) returns (GetInterestResponse){}
    rpc AddInterest(AddInterestRequest) returns (AddInterestResponse) {}
    rpc ManageInterest(ManageInterestRequest) returns (ManageInterestResponse){}
    rpc ValidateUser(ValidateUserRequest) returns (ValidateUserResponse){}
    rpc GoogleLogin(GoogleLoginRequest) returns (GoogleLoginResponse){}

}

message SignupRequest {
    string username = 1;
    string email = 2;
    string phoneNumber = 3;
    string password = 4;
    string cPassword = 5;
    string otp = 6;
    string referral = 7;
}

message SignupResponse {
    int64 status = 1;
    string token = 2;
    string message =3; 
    string error = 4;
}

message OtpSignUpRequest {
    string username = 1;
    string email = 2;
    string phoneNumber = 3;
    string password = 4;
    string cPassword = 5;
}

message OtpSignUpResponse {
    int64 status = 1;
    string message = 2;
    string error = 3;
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    int64 status = 1;
    string username = 2;
    string email = 3;
    string phoneNumber = 4;
    string error = 5;
    string uid = 6;
    string message = 7;
}

message validNameRequest {
    string username = 1;
}

message validNameResponse {
    int64 status = 1;
    string message = 2;
    string error = 3;
}

message resendOtpRequest{
    string phoneNumber = 1;
}

message resendOtpResponse{
    int64 status = 1;
    string message = 2;
    string error = 3;
}


message ForgotPasswordOtpRequest{
    string phoneNumber = 1;
}

message ForgotPasswordOtpResponse{
    int64 status =1;
    string message = 2;
    string error = 3;
}

message ForgotPasswordValidateOtpRequest{
    string phoneNumber =1;
    string otp = 2;
}
message ForgotPasswordValidateOtpResponse{
    int64 status =1;
    string message =2;
    string error = 3;
}

message ForgotPasswordChangePasswordRequest{
    string phoneNumber =1;
    string password = 2;
}

message ForgotPasswordChangePasswordResponse{
    int64 status = 1;
    string message = 2;
    string error = 3;
}

message AdminLoginRequest{
    string email = 1;
    string password = 2;
}

message AdminLoginResponse{
    int64 status = 1;
    string uid = 2;
    string message = 3;
    string error = 4;
}

message GetUsersRequest{

}

message user{
    string id = 1;
    string userName =2;
    string email = 3;
    string phoneNumber = 4;
    bool status = 5;
}

message GetUsersResponse{
    int32 status = 1;
    repeated user users = 2;
    string message = 3;
    string error = 4;
}

message ManageUserRequest{
    string id = 1;
}

message ManageUserResponse{
    int32 status = 1;
    string message = 2;
    string error = 3;
}

message GetInterestRequest{

}

message interest{
    string id =1;
    string interest = 2;
    bool status = 3;
}

message GetInterestResponse{
    int64 status = 1;
    repeated interest interests = 2;
    string message = 3;
    string error = 4;
}

message AddInterestRequest{
    string interest = 1;
}

message AddInterestResponse{
    int32 status = 1;
    string message = 2;
    string error = 3;
}

message ManageInterestRequest{
    string id = 1;
}

message ManageInterestResponse{
    int64 status = 1;
    string message = 2;
    string error = 3;
}

message ValidateUserRequest{
    string email=1;
}

message ValidateUserResponse{
    int64 status =1;
    string message =2;
    bool isBlocked = 3;
    string error = 4;
}

message GoogleLoginRequest{
    string token = 1;
}

message GoogleLoginResponse{
    int64 status = 1;
    string username = 2;
    string email = 3;
    string phoneNumber = 4;
    string error = 5;
    string uid = 6;
    string message = 7;
}